# practice-leetcode

./: README.md  month1_january.ipynb
LeetCode_Cpp/: CMakeLists.txt
LeetCode_Cpp/problems/min_days_to_make_bouquets/: min_days_to_make_bouquets.cpp  min_days_to_make_bouquets.h
LeetCode_Cpp/problems/most_profit_assigning_work/: most_profit_assigning_work.cpp  most_profit_assigning_work.h
LeetCode_Cpp/problems/patching_arrays/: patching_arrays.cpp  patching_arrays.h
LeetCode_Cpp/problems/sum_of_square_numbers/: sum_of_square_numbers.cpp  sum_of_square_numbers.h
LeetCode_Cpp/problems/zig_zag_conversion/: zig_zag_conversion.cpp  zig_zag_conversion.h
LeetCode_Cs/: LeetCode_Cs.sln
LeetCode_Cs/LeetCode_Cs/: Program.cs
LeetCode_Cs/LeetCode_Cs/Problems/: MinDaysToMakeBouquets.cs  MostProfitAssigningWork.cs  PatchArray.cs  SumOfSquareNumbers.cs  ZigZagConversion.cs
LeetCode_Java/src/: MinDaysToMakeBouquets.java  MostProfitAssigningWork.java  PatchingArray.java  SumOfSquareNumbers.java  ZigZagConversion.java
LeetCode_JavaScript/: MaxProfitAssignment.js  MinDaysToMakeBouquets.js  PatchArray.js  SumOfSquareNumbers.js  ZigZagConversion.js
LeetCode_Python/: PatchArray.py
LeetCode_Python/problems/: MinDaysToMakeBouquets.py  MostProfitAssigningWork.py  PatchArray.py  SumOfSquareNumbers.py  ZigZagConversion.py
leetcode_2024/: jan01.js  jan02.js
leetcode_2025/: month1_january.ipynb
